--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -29,7 +29,7 @@
         <div class="row" id="workspaceSections">
            <div class="hamburger" style="display:none" id="mySidebar">
             <button onclick="w3_close()" >Close &times; </button></br>
-           </br>
+            <%= user.name %></br>
             <a href="#" >Homework</a></br>
             <a href="#" >Help</a></br>
             <a href="/users/logout" >Logout</a></br>
