--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -30,7 +30,7 @@
            <div class="hamburger" style="display:none" id="mySidebar">
             <button onclick="w3_close()" >Close &times; </button></br>
             <%= user.name %></br>
-            <a href="#" >Homework</a></br>
+            <a href="/users/homework" >Homework</a></br>
             <a href="#" >Help</a></br>
             <a href="/users/logout" >Logout</a></br>
             </div>
