--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -4,7 +4,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#" onclick="w3_open()">☰</a>
+        <a class="navbar-brand" href="#mySidebar" data-toggle="collapse" role="button" aria-expanded="false">☰</a>
         <a class="navbar-brand" href="#"  style="margin: auto; text-align: center; display: block;">
             Math Buzz
         </a>
@@ -27,12 +27,14 @@
       </div>
     <div class="container-fluid">
         <div class="row" id="workspaceSections">
-           <div class="hamburger" style="display:none" id="mySidebar">
-            <button onclick="w3_close()" >Close &times; </button></br>
-            <%= user.name %></br>
-            <a href="#" >Homework</a></br>
-            <a href="#" >Help</a></br>
-            <a href="/users/logout" >Logout</a></br>
+           <div class="hamburger" style="display:outside" id="mySidebar">
+            <!--<button onclick="w3_close()" >Close &times; </button></br>-->
+            <ul class="list-unstyled components">
+            <li><label><%= user.name %></label></li>
+            <li><a href="#" >Homework</a></li> 
+            <li><a href="#" >Help</a></li>
+            <li><a href="/users/logout" >Logout</a></li>
+            </ul>
             </div>
             <div class="col-md-3 widgetSection">
                 <div class="row navbar">
