--- a/Login/views/teacherdashboard.ejs
+++ b/Login/views/teacherdashboard.ejs
@@ -26,8 +26,8 @@
                             </div>  
                         </div>
                         
-                            <div class="form-group" align="center">
-                        <a href="#" class="btn btn-primary btn-block">Add Quiz</a>
+                <div class="col-lg-12" style="text-align:center">  
+                        <a href="#" class="btn-group-justified">Add Homework</a>
                 </div>
            </div> 
      </body>
