US#117-Task#121 Added View students button to Teacher Page

--- a/Login/views/teacherdashboard.ejs
+++ b/Login/views/teacherdashboard.ejs
@@ -1,5 +1,5 @@
 <!-- 
-    Author : Sai Vinay Gangadharabhatla
+    Author : Sai Vinay Gangadharabhatla, Lakshmi Kala Pedarla
     Version : 1.0
  -->
  <!DOCTYPE html>
@@ -27,7 +27,8 @@
                         </div>
                         
                 <div class="col-lg-12" style="text-align:center">  
-                        <a href="#" class="btn-group-justified">Add Homework</a>
+                        <a href="#" class="btn btn-group-justified btn-outline-primary">Add Homework</a></br>
+                        <a href="#" class="btn btn-group-justified btn-outline-primary">View Students</a> 
                 </div>
            </div> 
      </body>
