--- a/Login/views/teacherdashboard.ejs
+++ b/Login/views/teacherdashboard.ejs
@@ -27,8 +27,8 @@
                         </div>
                         
                 <div class="col-lg-12" style="text-align:center">  
-                        <a href="#" class="btn btn-group-justified btn-outline-primary">Add Homework</a></br>
-                        <a href="#" class="btn btn-group-justified btn-outline-primary">View Students</a> 
+                        <a href="/users/createHomeWork" class="btn btn-group-justified btn-outline-primary">Add Homework</a></br>
+                        <a href="/users/listStudents" class="btn btn-group-justified btn-outline-primary">View Students</a> 
                 </div>
            </div> 
      </body>
