styling completed for login page

--- a/Login/views/layout.ejs
+++ b/Login/views/layout.ejs
@@ -3,7 +3,7 @@
 <head>
 	<title>Login</title>
 	<link rel="stylesheet" href="https://ser-515-team.netlify.com/lib/css/bootstrap.min.css" />
-  <link rel="stylesheet"  href="https://ser-515-team.netlify.com/Login/views/workspace/main/css/index.css">
+  <link rel="stylesheet"  href="/workspace/main/css/index.css">
   <link rel="stylesheet"  href="https://ser-515-team.netlify.com/Login/views/workspace/homework/css/index.css">
 
 </head>
