--- a/Login/views/createHomeWork.ejs
+++ b/Login/views/createHomeWork.ejs
@@ -1,22 +1,14 @@
 <!-- Author: Lakshmi Kala Pedarla, Narendra Mohan
   Version:1.0 -->
 
-<html>
-
-<head>
-    <title>Homework</title>
-</head>
-<body>
-    <div>
-        <h1>
+    <div style="padding: 5%;">
+        <h4>
             <center>Create Homework</center>
-         </h1>
+         </h4>
         <br/>
-        <center>
             <% include ./partials/messages %>
             <form action="/users/createHomeWork" method="POST">
                <div class="form-group">
-                  <label for="title">Enter title</label>
                   <input
                     type="title"
                     id="title"
@@ -34,7 +26,6 @@
                   </select>
                </div>  
                <div class="form-group">
-                  <label for="question">Enter Question</label>
                   <input
                      type="question"
                      id="question"
@@ -45,7 +36,6 @@
                   />
                </div>
                <div class="form-group">
-                     <label for="answer">Enter Answer</label>
                      <input
                        type="answer"
                        id="answer"
@@ -55,7 +45,7 @@
                        value="<%= typeof answer != 'undefined' ? answer : '' %>"
                      />
                </div>
-                     <button class="btn btn-primary btn-block" name="addQuestion" value="addQuestion">
+                     <button class="btn btn-outline-secondary btn-block" name="addQuestion" value="addQuestion">
                         Add Question
                      </button>
                      <button type="submit" class="btn btn-secondary btn-block" name="submit" value="submit">
