--- a/Login/views/homework.ejs
+++ b/Login/views/homework.ejs
@@ -4,31 +4,40 @@
 
 <body>
 
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            SER 515 - Team 18
-        </a>
-        <a href="/users/logout" class="navbar-brand pull-right">Log Out</a>
-    </nav>
+        <nav class="navbar navbar-dark bg-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mySidebar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                <a class="navbar-brand" href="#"  style="display: block;">
+                    MathBuzz
+                </a>
+            </nav>
     <div class="container-fluid">
         <div class="row" id="hwSections">
-
-            <div class="col-md-4 widgetSection">
-                <div class="row navbar">
-                    <div class="col">Widgets</div>
+                <div class="collapse"  id="mySidebar">
+                        <div class = "bg-dark p-4">
+                            <ul class="list-unstyled components">
+                                <li><p class="text-white h7"><a href="#">Help</a></p></li>
+                                <li><p class="text-white h7"><a href="/users/logout">Logout</a></p></li>
+                            </ul>
+                        </div>  
+                    </div>
+            <div class="col widgetSection">
+                <div class="btn">
+                    <div >Widgets</div>
                 </div>
-
+                <hr>
                 <div id=Operators>
                     <p>Operators</p>
                     <div class="row">
 
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwaddition" value="+"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwhwsubtraction" value="-"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
                         
                     </div>
@@ -37,46 +46,53 @@
                 <div id=Numbers>
                     <p>Numbers</p>
                     <div class="row">
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwnumber1" value="1"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwnumber2" value="2"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwnumber3" value="3"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                    </div> <p> </p>
+                    <div class="row">
+                        <div class="col-4">
                             <input type="button" id="hwnumber4" value="4"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwnumber5" value="5"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwnumber6" value="6"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                    </div> <p></p>
+                    <div class="row">
+                        <div class="col-4">
                             <input type="button" id="hwnumber7" value="7"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwnumber8" value="8"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwnumber9" value="9"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                    </div> <p></p>
+                    <div class="row">
+                        <div class="col-4" style="margin-left: 48.5px;">
                             <input type="button" id="hwnumber0" value="0"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
+                    </div>
                     </div>
                 </div>
                 <br>
@@ -84,33 +100,32 @@
                     <p>Paranthesis</p>
                     <div class="row">
 
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwleft_Paranthesis" value="("  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
-                        <div class="col-1">
+                        <div class="col-4">
                             <input type="button" id="hwright_paranthesis" value=")"  
-                                draggable="true">
+                                draggable="true"  class="btn  btn-outline-secondary">
                         </div>
                     </div>
                 </div>
-                <br>
 
 
-            </div>
-
-            <div class="col-md-6 hwSection">
-                <div class="row navbar">
-                    <div class="col" align="center">Homework</div>
+            <div class="col hwSection">
+                <div class="btn">
+                    <div  align="center">Homework</div>
                 </div>
+                <hr>
                 <p align="center" id="hwspace"> </p>
             </div>
-            <div class="col-md-2 pointsSection">
-                <div class="row navbar">
-                    <div class="col">Score</div>
+            <div class="col-md-1 pointsSection">
+                <div class="btn">
+                    <div >Score</div>
                 </div>
+                <hr>
                 <div id="finalMarks">
-                    <h4> <i id='score'>0</i>/5 </h4>
+                    <h4> <span id='score'>0</span>/5 </h4>
 
                 </div>
             </div>
