--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -32,10 +32,10 @@
            <div class="collapse"  id="mySidebar">
                 <div class = "bg-dark p-4">
                     <ul class="list-unstyled components">
-                        <li><h5 class="text-white h4"><%= user.name %></h5></li>
-                        <li><h7 class="text-white h7"><a href="/users/homework" >Homework</a></h7></li> 
-                        <li><h7 class="text-white h7"><a href="#">Help</a></h7></li>
-                        <li><h7 class="text-white h7"><a href="/users/logout">Logout</a></h7></li>
+                        <li><h5 class="text-white h6">Hi, <%= user.name %></h5></li><br>
+                        <li><p class="text-white h7"><a href="/users/homework" >Homework</a></p></li> 
+                        <li><p class="text-white h7"><a href="#">Help</a></p></li>
+                        <li><p class="text-white h7"><a href="/users/logout">Logout</a></p></li>
                     </ul>
                 </div>  
             </div>
@@ -44,6 +44,7 @@
                     <div>Widgets</div> 
                 </div>
                  <hr>
+                 <div class="completeWidgets">
                 <div id=Operators>
                     <p>Operators</p>
                     <div class="row">
@@ -68,10 +69,10 @@
                                 draggable="true">
                         </div>
                         <div class="col-4 ex_grade1">
-                            <input type="button" class="btn  btn-outline-secondary" id="equalto" value="=" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
+                            <input style="display:none;" type="button" class="btn  btn-outline-secondary" id="equalto" value="=" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
                         </div>
                     </div>
-                </div>
+                </div><br>
                 <div id=Numbers>
                     <p>Numbers</p>
                     <div class="row">
@@ -293,6 +294,7 @@
                     </div>
                     <br />
                 </div>
+            </div>
             </div>
 
             <div class="col mainSection">
