--- a/Login/views/searchUser.ejs
+++ b/Login/views/searchUser.ejs
@@ -2,9 +2,9 @@
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
-        <h1 class="text-center mb-3">
+        <h2 class="text-center mb-3">
           <i class="fas fa-user-plus"></i> Search Information
-        </h1>
+        </h2>
         <% include ./partials/messages %>
         <form action="/users/searchUser" method="POST">
           <div class="form-group">
@@ -18,7 +18,7 @@
               value="<%= typeof email != 'undefined' ? email : '' %>"
             />
           </div>
-            <button type="submit" class="btn btn-primary btn-block">
+            <button type="submit" class="btn btn-secondary btn-block">
             Search
           </button>
         </form>
