--- a/Login/views/searchUserToDelete.ejs
+++ b/Login/views/searchUserToDelete.ejs
@@ -1,9 +1,9 @@
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
-        <h1 class="text-center mb-3">
+        <h3 class="text-center mb-3">
           <i class="fas fa-user-plus"></i> Search User to delete
-        </h1>
+        </h3>
         <% include ./partials/messages %>
         <form action="/users/searchUserToDelete" method="POST">
           <div class="form-group">
@@ -17,7 +17,7 @@
               value="<%= typeof email != 'undefined' ? email : '' %>"
             />
           </div>
-            <button type="submit" class="btn btn-primary btn-block">
+            <button type="submit" class="btn btn-secondary btn-block">
             Search
           </button>
         </form>
