--- a/Login/views/teacherdashboard.ejs
+++ b/Login/views/teacherdashboard.ejs
@@ -2,35 +2,28 @@
     Author : Sai Vinay Gangadharabhatla, Lakshmi Kala Pedarla
     Version : 1.0
  -->
- <!DOCTYPE html>
- <html>
-     <head></head>
-     <body>
-            
             <nav class="navbar navbar-dark bg-dark">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mySidebar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
-                    <a class="navbar-brand" href="#"  style="margin: auto; text-align: center; display: block;">
-                    Teacher Dashboard
+                    <a class="navbar-brand" href="#"  style=" text-align: center; display: block;">
+                    MathBuzz
                     </a>
                 </nav>
-            
+            <div class="container-fluid">
                 <div class="row">
-            <div class="collapse"  id="mySidebar">
+            <div class="collapse"  id="mySidebar" style="min-height: -webkit-fill-available;">
                             <div class = "bg-dark p-4">
                                 <ul class="list-unstyled components">
-                                    <li><h7 class="text-white h7"><a href="#">Help</a></h7></li>
                                     <li><h7 class="text-white h7"><a href="/users/logout">Logout</a></h7></li>
                                 </ul>
                             </div>  
                         </div>
                         
-                <div class="col-lg-12" style="text-align:center">  
-                        <a href="/users/createHomeWork" class="btn btn-group-justified btn-outline-primary">Add Homework</a></br>
-                        <a href="/users/listStudents" class="btn btn-group-justified btn-outline-primary">View Students</a> 
+                <div class="col" style="text-align:center; padding:10%;">  
+                        <a href="/users/createHomeWork" class="btn btn-group-justified btn-outline-secondary">Add Homework</a></hr>
+                        <a href="/users/listStudents" class="btn btn-group-justified btn-outline-secondary">View Students</a> 
                 </div>
            </div> 
-     </body>
- </html>
+        </div>
  
