--- a/Login/views/updateUser.ejs
+++ b/Login/views/updateUser.ejs
@@ -1,4 +1,4 @@
-
+<div style="padding: 10%;">
 <p>Update user</p>
 <% include ./partials/messages %>
 
@@ -36,7 +36,8 @@
         value="<%= typeof grade != 'undefined' ? grade : user.grade %>"
       />
     </div>
-    <button type="submit" class="btn btn-primary btn-block">
+    <button type="submit" class="btn btn-secondary btn-block">
       Update
     </button>
   </form>
+</div> 
