--- a/Login/views/viewStudents.ejs
+++ b/Login/views/viewStudents.ejs
@@ -2,33 +2,37 @@
     Author : Narendra Mohan Murali Mohan
     Version : 1.0
  -->
-<html>
-    <head> Student List </head>
+ <div class=" text-center" style="padding: 10%;">
+        <div class="card-header">
+ <ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item">
+        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Grade 1</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Grade 6</a>
+      </li>
+    </ul>
+</div>
+<div class="">
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <% Students.forEach(function(student) { %>
+                <% if(student.grade == "1") { %>
+                    <li class="list-group-item"><%= student.name %></li>
+              <%  } %>
+            <% }); %>
 
-    <body>
-        <table>
-            <tr><th>Names</th></tr>
-            <th>Grade1</th>
-                <% Students.forEach(function(student) { %>
-                    <% if(student.grade == "1") { %>
-                        <tr><td><%= student.name %></td></tr>
-                  <%  } %>
-                <% }); %>
-                <th>Grade6</th>
-                <% Students.forEach(function(student) { %>
-                    <% if(student.grade == "6") { %>
-                        <tr><td><%= student.name %></td></tr>
-                  <%  } %>
-                <% }); %>
-                <th>Grade9</th>
-                <% Students.forEach(function(student) { %>
-                    <% if(student.grade == "9") { %>
-                        <tr><td><%= student.name %></td></tr>
-                  <%  } %>
-                <% }); %>
-        </table>                    
-    </body>
-</html>
+      </div>
+      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <% Students.forEach(function(student) { %>
+                <% if(student.grade == "6") { %>
+                    <li class="list-group-item"><%= student.name %></li>
+              <%  } %>
+            <% }); %>
+
+      </div>
+    </div>
+</div>
 
 
 
