--- a/Login/views/viewStudents.ejs
+++ b/Login/views/viewStudents.ejs
@@ -2,6 +2,12 @@
     Author : Narendra Mohan Murali Mohan
     Version : 1.0
  -->
+ <nav class="navbar navbar-dark bg-dark">
+    <h2 class="text-white h2">Student List</h2>
+    <a class="navbar-brand" href="/users/teacherdashboard"  style=" text-align: center; display: block;">
+    Go to Dashboard
+    </a>
+</nav>
  <div class=" text-center" style="padding: 10%;">
         <div class="card-header">
  <ul class="nav nav-tabs" id="myTab" role="tablist">
