Task#123 BugFix in admin page done

--- a/Login/views/adminDashboard.ejs
+++ b/Login/views/adminDashboard.ejs
@@ -1,3 +1,5 @@
+<!-- Author: Archana Madhavan, Narendra Mohan
+  Version:1.0 -->
 <meta name="author" content="Lakshmi Kala Pedarla">
 <meta name="author" content="Archana Madhavan">
 
@@ -23,7 +25,7 @@
 
                         <ul class="list-group col" style="margin-left:2%;margin-top:1%;">
                             <li class="list-group-item">
-                                <a href="/users/register" style="font-size : 15px;color:#343a40">Add User</a>
+                                <a href="/users/register" style="font-size : 15px;color:#343a40">Register User</a>
                             </li>
                             <li class="list-group-item">
                                 <a value="Update User" href="/users/searchUser" style="font-size : 15px;color:#343a40">Update User</a>
