--- a/Login/views/searchUser.ejs
+++ b/Login/views/searchUser.ejs
@@ -1,14 +1,18 @@
-<!--<meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: fonts.gstatic.com;">-->
+<!-- Author: Archana Madhavan, Narendra Mohan
+  Version:1.0 -->
+  <nav class="navbar navbar-dark bg-dark">
+    <h2 class="text-white h2">Search User</h2>
+    <a class="navbar-brand" href="/users/adminDashboard"  style=" text-align: center; display: block;">
+    Go to Dashboard
+    </a>
+</nav>
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
-        <h2 class="text-center mb-3">
-          <i class="fas fa-user-plus"></i> Search Information
-        </h2>
         <% include ./partials/messages %>
         <form action="/users/searchUser" method="POST">
           <div class="form-group">
-            <label for="name">Search Name to be Updated</label>
+            <label for="name">Search Email to be Updated</label>
             <input
               type="email"
               id="email"
