--- a/Login/views/searchUserToDelete.ejs
+++ b/Login/views/searchUserToDelete.ejs
@@ -1,9 +1,14 @@
+<!-- Author: Archana Madhavan, Narendra Mohan
+  Version:1.0 -->
+  <nav class="navbar navbar-dark bg-dark">
+    <h2 class="text-white h2">Search User</h2>
+    <a class="navbar-brand" href="/users/adminDashboard"  style=" text-align: center; display: block;">
+    Go to Dashboard
+    </a>
+</nav>
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
-        <h3 class="text-center mb-3">
-          <i class="fas fa-user-plus"></i> Search User to delete
-        </h3>
         <% include ./partials/messages %>
         <form action="/users/searchUserToDelete" method="POST">
           <div class="form-group">
