US#80 Task#104 displayed list of homeworks in sidebar in student workspace

--- a/Login/views/createHomeWork.ejs
+++ b/Login/views/createHomeWork.ejs
@@ -25,8 +25,8 @@
                <div class="form-group">
                   <label for="grade">Select Grade</label>
                   <select name="gradeType" id = "gradeType">
-                     <option value="Grade1">Grade 1</option>
-                     <option value="Grade6">Grade 6</option>
+                     <option value="1">Grade 1</option>
+                     <option value="6">Grade 6</option>
                   </select>
                </div>  
                <div class="form-group">
