--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -33,7 +33,11 @@
                 <div class = "bg-dark p-4">
                     <ul class="list-unstyled components">
                         <li><h5 class="text-white h6">Hi, <%= user.name %></h5></li><br>
-                        <li><p class="text-white h7"><a href="/users/homework" >Homework</a></p></li> 
+                        <% Homework.forEach(function(homework){ %>
+                            <% if(homework.grade == user.grade){ %>
+                                <li><p class="text-white h7"><a href="#" ><%= homework.title %></a></p></li>
+                         <% } %>
+                         <% }); %>
                         <li><p class="text-white h7"><a href="#">Help</a></p></li>
                         <li><p class="text-white h7"><a href="/users/logout">Logout</a></p></li>
                     </ul>
