--- a/Login/views/partials/messages.ejs
+++ b/Login/views/partials/messages.ejs
@@ -9,7 +9,7 @@
 <div class="alert alert-success alert-dismissible fade show" role="alert">
   <%= success_msg %>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>s
+    <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <% } %> <% if(error_msg != ''){ %>
