--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -35,7 +35,7 @@
                         <li><h5 class="text-white h6">Hi, <%= user.name %></h5></li><br>
                         <% Homework.forEach(function(homework){ %>
                             <% if(homework.grade == user.grade){ %>
-                                <li><p class="text-white h7"><a href="#" ><%= homework.title %></a></p></li>
+                                <li><p class="text-white h7"><a href="/users/studentHomework/<%- homework._id %>"><%= homework.title %></a></p></li>
                          <% } %>
                          <% }); %>
                         <li><p class="text-white h7"><a href="#">Help</a></p></li>
