performance improvements and bug fixes

--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <hr>
-                <p align="center" id="workspace"> </p>
+                <p align="center" id="workspace" style="height: 65vh;"> </p>
             </div>
             <div class="col resultSection">
                 <div class="btn">
@@ -320,7 +320,10 @@
                     
                 </div>
                 <hr>
-                <div id="widgetActivity"></div>
+                <div id="widgetActivity">
+                        <ul id="actionHistory" class="list-unstyled"></ul>
+
+                </div>
 
             </div>
         </div>
