--- a/Login/views/layout.ejs
+++ b/Login/views/layout.ejs
@@ -12,11 +12,12 @@
 	
     <script src="https://ser-515-team.netlify.com/lib/js/jquery-3.4.1.min.js"></script>
     <script src="https://ser-515-team.netlify.com/lib/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://ser-515-team.netlify.com/Login/views/workspace/main/js/index.js"></script>
-    <script type="text/javascript" src="https://ser-515-team.netlify.com/Login/views/workspace/homework/js/index.js"></script>
-    <script type="text/javascript" src="https://ser-515-team.netlify.com/Login/views/workspace/result/js/index.js"></script>
-    <script type="text/javascript" src="https://ser-515-team.netlify.com/Login/views/workspace/widgets/js/index.js"></script>
-    <script type="text/javascript" src="https://ser-515-team.netlify.com/Login/views/workspace/history/js/index.js"></script>
+    <script type="text/javascript" src="/workspace/main/js/index.js"></script>
+    <script type="text/javascript" src="
+    /workspace/homework/js/index.js"></script>
+    <script type="text/javascript" src="/workspace/result/js/index.js"></script>
+    <script type="text/javascript" src="/workspace/widgets/js/index.js"></script>
+    <script type="text/javascript" src="/workspace/history/js/index.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.2/math.min.js"></script>
 
 
