--- a/Login/views/homework.ejs
+++ b/Login/views/homework.ejs
@@ -134,7 +134,7 @@
                 </div>
                 <hr>
                 <div id="finalMarks">
-                    <h4> <span id='score'>0</span>/5 </h4>
+                    <h4> <span id='score'>0</span>/<span id="totalMarks"></span> </h4>
 
                 </div>
             </div>
