--- a/Login/views/layout.ejs
+++ b/Login/views/layout.ejs
@@ -4,7 +4,7 @@
 	<title>Login</title>
 	<link rel="stylesheet" href="https://ser-515-team.netlify.com/lib/css/bootstrap.min.css" />
   <link rel="stylesheet"  href="https://ser-515-team.netlify.com/Login/views/workspace/main/css/index.css">
-  <link rel="stylesheet"  href="https://ser-515-team.netlify.com/Login/views/workspace/homework/css/index.css">
+  <link rel="stylesheet"  href="/workspace/homework/css/index.css">
 
 </head>
 <body>
