US#84 - Task#113 Added Help Page with instructions

--- a/Login/views/homework.ejs
+++ b/Login/views/homework.ejs
@@ -18,7 +18,7 @@
                         <div class = "bg-dark p-4">
                             <ul class="list-unstyled components">
                                 <li><p class="text-white h7"><a href="/users/workspace">Home</a></p></li>
-                                <li><p class="text-white h7"><a href="#">Help</a></p></li>
+                                <li><p class="text-white h7"><a href="/users/viewHelpPage">Help</a></p></li>
                                 <li><p class="text-white h7"><a href="/users/logout">Logout</a></p></li>
                             </ul>
                         </div>  
