--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -38,7 +38,7 @@
                                 <li><p class="text-white h7"><a href="/users/studentHomework/<%- homework._id %>"><%= homework.title %></a></p></li>
                          <% } %>
                          <% }); %>
-                        <li><p class="text-white h7"><a href="#">Help</a></p></li>
+                        <li><p class="text-white h7"><a href="/users/viewHelpPage">Help</a></p></li>
                         <li><p class="text-white h7"><a href="/users/logout">Logout</a></p></li>
                     </ul>
                 </div>  
