Task#122 bugs fixed

--- a/Login/views/teacherdashboard.ejs
+++ b/Login/views/teacherdashboard.ejs
@@ -2,6 +2,7 @@
     Author : Sai Vinay Gangadharabhatla, Lakshmi Kala Pedarla
     Version : 1.0
  -->
+ <% include ./partials/messages %>
             <nav class="navbar navbar-dark bg-dark">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mySidebar" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
