--- a/Login/views/homework.ejs
+++ b/Login/views/homework.ejs
@@ -23,12 +23,8 @@
                         </div>  
                     </div>
             <div class="col widgetSection">
-                <div class="btn">
-                    <div >Widgets</div>
-                </div>
-                <hr>
                 <div id=Operators>
-                    <p>Operators</p>
+                    <p style="padding-top: .375rem;">Operators</p> 
                     <div class="row">
 
                         <div class="col-4">
@@ -36,13 +32,30 @@
                                 draggable="true"  class="btn  btn-outline-secondary">
                         </div>
                         <div class="col-4">
-                            <input type="button" id="hwhwsubtraction" value="-"  
+                            <input type="button" id="hwsubtraction" value="-"  
                                 draggable="true"  class="btn  btn-outline-secondary">
                         </div>
                         
-                    </div>
-                </div>
+                    </div><p></p>
+                    <div class="row grade6">
 
+                            <div class="col-4">
+                                <input type="button" id="hwmultiplication" value="*"  
+                                    draggable="true"  class="btn  btn-outline-secondary">
+                            </div>
+                            <div class="col-4">
+                                <input type="button" id="hwdivision" value="/"  
+                                    draggable="true"  class="btn  btn-outline-secondary">
+                            </div>
+                            <div class="col-4">
+                                    <input type="button" id="hwdot" value="."  
+                                        draggable="true"  class="btn  btn-outline-secondary">
+                                </div>
+                            
+                        </div>
+
+                </div>
+                <br>
                 <div id=Numbers>
                     <p>Numbers</p>
                     <div class="row">
@@ -94,22 +107,23 @@
                         </div>
                     </div>
                     </div>
-                </div>
-                <br>
-                <div id="grade6" style="display: none;">
-                    <p>Paranthesis</p>
-                    <div class="row">
-
-                        <div class="col-4">
-                            <input type="button" id="hwleft_Paranthesis" value="("  
-                                draggable="true"  class="btn  btn-outline-secondary">
+                    <br>
+                    <div class="grade6" style="display: none;">
+                            <p>Paranthesis</p>
+                            <div class="row">
+        
+                                <div class="col-3">
+                                    <input type="button" id="hwleft_Paranthesis" value="("  
+                                        draggable="true"  class="btn  btn-outline-secondary">
+                                </div>
+                                <div class="col-3">
+                                    <input type="button" id="hwright_paranthesis" value=")"  
+                                        draggable="true"  class="btn  btn-outline-secondary">
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-4">
-                            <input type="button" id="hwright_paranthesis" value=")"  
-                                draggable="true"  class="btn  btn-outline-secondary">
-                        </div>
-                    </div>
                 </div>
+                
 
 
             <div class="col hwSection">
