--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -44,13 +44,9 @@
                 </div>  
             </div>
             <div class="col widgetSection">
-                <div class="btn ">
-                    <div>Widgets</div> 
-                </div>
-                 <hr>
                  <div class="completeWidgets">
                 <div id=Operators>
-                    <p>Operators</p>
+                    <p style="padding-top: .375rem;">Operators</p>
                     <div class="row">
 
                         <div class="col-4">
@@ -73,10 +69,10 @@
                                 draggable="true">
                         </div>
                         <div class="col-4 ex_grade1">
-                            <input style="display:none;" type="button" class="btn  btn-outline-secondary" id="equalto" value="=" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
+                            <input type="button" class="btn  btn-outline-secondary" id="dot" value="." onclick="addvalueToWorkSpace(this.id)"> &nbsp;
                         </div>
                     </div>
-                </div><br>
+                </div>
                 <div id=Numbers>
                     <p>Numbers</p>
                     <div class="row">
@@ -135,11 +131,11 @@
                     <p>Paranthesis</p>
                     <div class="row">
 
-                        <div class="col-4">
+                        <div class="col-3">
                             <input type="button" class="btn  btn-outline-secondary" id="left_Paranthesis" value="(" onclick="addvalueToWorkSpace(this.id)"
                                 draggable="true">
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <input type="button" class="btn  btn-outline-secondary" id="right_paranthesis" value=")" onclick="addvalueToWorkSpace(this.id)"
                                 draggable="true">
                         </div>
@@ -337,6 +333,7 @@
 
 <script>
     var grade = <%- grade %> ;
+    localStorage.setItem('grade', grade);
 
     switch (grade) {
         case 1:
