Task#130 few bugs fixed.

--- a/Login/views/teacherDisplayHomework.ejs
+++ b/Login/views/teacherDisplayHomework.ejs
@@ -8,7 +8,7 @@
         </head>
         <body>
            <nav class="navbar navbar-dark bg-dark">
-           <h2 class="text-white h2">Homework1</h2>
+           <h2 class="text-white h2"><%= Title %></h2>
            <a class="navbar-brand" href="/users/viewHomeworksTeacher"  style=" text-align: center; display: block;">
            View Homeworks
            </a>
